--- a/GitMVC1/Views/Home/Index.cshtml
+++ b/GitMVC1/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>B6301057  Narupon</h2>
+        <h2>B6301057  Narupon P</h2>
         <p>B6301064 Pimpakan</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
